adição de criptografia e armazenamento do token no redis

--- a/microsservicos/Autenticacao/src/Autenticacao.Service/Autenticacao.Service.csproj
+++ b/microsservicos/Autenticacao/src/Autenticacao.Service/Autenticacao.Service.csproj
@@ -14,10 +14,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Autenticacao.Application\Autenticacao.Application.csproj" />
     <ProjectReference Include="..\Autenticacao.CrossCutting\Autenticacao.CrossCutting.csproj" />
   </ItemGroup>
 
