--- a/microsservicos/Autenticacao/src/Autenticacao.Service/appsettings.Development.json
+++ b/microsservicos/Autenticacao/src/Autenticacao.Service/appsettings.Development.json
@@ -10,6 +10,7 @@
   },
   "Urls": "https://*:5000",
   "JWT": {
-    "Secret" : "MVxnN8z2HiTfLbrkVRZEK2d80KmKV4bU"
+    "Secret": "MVxnN8z2HiTfLbrkVRZEK2d80KmKV4bU",
+    "HoursToExpireToken": 2
   }
 }
