--- a/microsservicos/Autenticacao/src/Autenticacao.Application/Autenticacao.Application.csproj
+++ b/microsservicos/Autenticacao/src/Autenticacao.Application/Autenticacao.Application.csproj
@@ -8,8 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.4" />
   </ItemGroup>
 
   <ItemGroup>
