adição de validação do dto de login

--- a/microsservicos/Autenticacao/src/Autenticacao.Service/Autenticacao.Service.csproj
+++ b/microsservicos/Autenticacao/src/Autenticacao.Service/Autenticacao.Service.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Autenticacao.Application\Autenticacao.Application.csproj" />
+    <ProjectReference Include="..\Autenticacao.Data\Autenticacao.Data.csproj" />
     <ProjectReference Include="..\Autenticacao.CrossCutting\Autenticacao.CrossCutting.csproj" />
   </ItemGroup>
 
