criando estrutura crud produto

--- a/microsservicos/Produtos/src/Produtos.Service/appsettings.Development.json
+++ b/microsservicos/Produtos/src/Produtos.Service/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MysqlConnectionString": "Server=mysql-produtos;DataBase=produto;Uid=admin;Pwd=JS6NJvyddMpavyu5Uh56dowe"
+  },
+  "Urls": "https://*:5001",
+  "JWT": {
+    "Secret": "MVxnN8z2HiTfLbrkVRZEK2d80KmKV4bU",
+    "HoursToExpireToken": 2
   }
 }
