--- a/microsservicos/Produtos/src/Produtos.CrossCutting/Produtos.CrossCutting.csproj
+++ b/microsservicos/Produtos/src/Produtos.CrossCutting/Produtos.CrossCutting.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\Produtos.Domain\Produtos.Domain.csproj" />
+    <ProjectReference Include="..\Produtos.Data\Produtos.Data.csproj" />
+    <ProjectReference Include="..\Produtos.Application\Produtos.Application.csproj" />
+  </ItemGroup>
+
 </Project>
