tratativas autenticacao. criacao crud produtos em andamento

--- a/microsservicos/Autenticacao/src/Autenticacao.Service/appsettings.Development.json
+++ b/microsservicos/Autenticacao/src/Autenticacao.Service/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "MysqlConnectionString": "Server=mysql-autenticacao;DataBase=autenticacao;Uid=admin;Pwd=JS6NJvyddMpavyu5Uh56dowe"
+    "MysqlConnectionString": "Server=mysql-autenticacao;DataBase=autenticacao;Uid=admin;Pwd=JS6NJvyddMpavyu5Uh56dowe",
+    "Redis": "redis-ecommerce:6379"
   },
   "Urls": "https://*:5000",
   "JWT": {
