--- a/microsservicos/Produtos/src/Produtos.Service/appsettings.Development.json
+++ b/microsservicos/Produtos/src/Produtos.Service/appsettings.Development.json
@@ -6,9 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "MysqlConnectionString": "Server=mysql-produtos;DataBase=produto;Uid=admin;Pwd=JS6NJvyddMpavyu5Uh56dowe"
+    "MysqlConnectionString": "Server=mysql-produtos;DataBase=produtos;Uid=admin;Pwd=JS6NJvyddMpavyu5Uh56dowe"
   },
-  "Urls": "https://*:5001",
+  "Urls": "https://*:5002",
   "JWT": {
     "Secret": "MVxnN8z2HiTfLbrkVRZEK2d80KmKV4bU",
     "HoursToExpireToken": 2
