--- a/microsservicos/Pedidos/src/Pedidos.Service/appsettings.Development.json
+++ b/microsservicos/Pedidos/src/Pedidos.Service/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MysqlConnectionString": "Server=mysql-pedidos;DataBase=pedidos;Uid=admin;Pwd=JS6NJvyddMpavyu5Uh56dowe"
+  },
+  "Urls": "https://*:5003",
+  "JWT": {
+    "Secret": "MVxnN8z2HiTfLbrkVRZEK2d80KmKV4bU",
+    "HoursToExpireToken": 2
   }
 }
