--- a/microsservicos/Pedidos/src/Pedidos.CrossCutting/Pedidos.CrossCutting.csproj
+++ b/microsservicos/Pedidos/src/Pedidos.CrossCutting/Pedidos.CrossCutting.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\Pedidos.Domain\Pedidos.Domain.csproj" />
+    <ProjectReference Include="..\Pedidos.Data\Pedidos.Data.csproj" />
+    <ProjectReference Include="..\Pedidos.Application\Pedidos.Application.csproj" />
+  </ItemGroup>
+
+
 </Project>
