--- a/microsservicos/Pedidos/src/Pedidos.Service/appsettings.Development.json
+++ b/microsservicos/Pedidos/src/Pedidos.Service/appsettings.Development.json
@@ -8,9 +8,22 @@
   "ConnectionStrings": {
     "MysqlConnectionString": "Server=mysql-pedidos;DataBase=pedidos;Uid=admin;Pwd=JS6NJvyddMpavyu5Uh56dowe"
   },
-  "Urls": "https://*:5003",
+  "Urls": "https://*:5001",
   "JWT": {
     "Secret": "MVxnN8z2HiTfLbrkVRZEK2d80KmKV4bU",
     "HoursToExpireToken": 2
+  },
+  "RabbitMQ": {
+    "Host": "rabbitmq",
+    "Password": "teste",
+    "User": "teste",
+    "Queues": {
+      "Pedido": "pedido"
+    }
+  },
+  "Integrations": {
+    "Produto": {
+      "Url": "https://produtos-api:5002"
+    }
   }
 }
