--- a/container/docker-compose.yml
+++ b/container/docker-compose.yml
@@ -11,9 +11,15 @@ services:
         - "5000:5000"
       volumes:
         - ../microsservicos/Autenticacao:/app
+      restart: always
       environment:
         "ASPNETCORE_URLS": "https://+;http://+"
-      command: sh -c "cd src/Autenticacao.Service && dotnet ef database update --context AutenticacaoContext --project ../Autenticacao.Data/Autenticacao.Data.csproj && dotnet run"
+      command: >
+        sh -c "chmod +x ./wait-for-mysql.sh &&
+              ./wait-for-mysql.sh &&
+              cd src/Autenticacao.Service && 
+              dotnet ef database update --context AutenticacaoContext --project ../Autenticacao.Data/Autenticacao.Data.csproj &&
+              dotnet run"
       depends_on:
         - mysql-autenticacao
       networks: 
@@ -49,7 +55,13 @@ services:
         - "5001:5001"
       volumes:
         - ../microsservicos/Pedidos:/app
-      command: sh -c "cd src/Pedidos.Service && dotnet ef database update --context PedidoContext --project ../Pedidos.Data/Pedidos.Data.csproj && dotnet run"
+      restart: always
+      command: >
+        sh -c "chmod +x ./wait-for-mysql.sh &&
+              ./wait-for-mysql.sh &&
+              cd src/Pedidos.Service && 
+              dotnet ef database update --context PedidoContext --project ../Pedidos.Data/Pedidos.Data.csproj &&
+              dotnet run"
       depends_on:
         - mysql-pedidos
       networks: 
@@ -85,7 +97,13 @@ services:
         - "5002:5002"
       volumes:
         - ../microsservicos/Produtos:/app
-      command: sh -c "cd src/Produtos.Service && dotnet ef database update --context ProdutoContext --project ../Produtos.Data/Produtos.Data.csproj && dotnet run"
+      restart: always
+      command: >
+        sh -c "chmod +x ./wait-for-mysql.sh &&
+              ./wait-for-mysql.sh &&
+              cd src/Produtos.Service && 
+              dotnet ef database update --context ProdutoContext --project ../Produtos.Data/Produtos.Data.csproj &&
+              dotnet run"
       depends_on:
         - mysql-produtos
       networks: 
@@ -135,6 +153,7 @@ services:
         - "6379:6379"
       volumes:
         -  ../data/redis:/data
+      restart: always
       networks:
         - local
 
