--- a/microsservicos/Pedidos/src/Pedidos.Service/appsettings.Development.json
+++ b/microsservicos/Pedidos/src/Pedidos.Service/appsettings.Development.json
@@ -11,7 +11,9 @@
   "Urls": "https://*:5001",
   "JWT": {
     "Secret": "MVxnN8z2HiTfLbrkVRZEK2d80KmKV4bU",
-    "HoursToExpireToken": 2
+    "HoursToExpireToken": 2,
+    "NameIdentifier": "Pedido",
+    "Name": "Pedido"
   },
   "RabbitMQ": {
     "Host": "rabbitmq",
