--- a/container/docker-compose.yml
+++ b/container/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       environment:
         "ASPNETCORE_URLS": "https://+;http://+"
       command: >
-        sh -c "chmod +x ./wait-for-mysql.sh &&
-              ./wait-for-mysql.sh &&
+        sh -c "chmod +x /app/wait-for-mysql.sh &&
+              /app/wait-for-mysql.sh &&
               cd src/Autenticacao.Service && 
               dotnet ef database update --context AutenticacaoContext --project ../Autenticacao.Data/Autenticacao.Data.csproj &&
               dotnet run"
@@ -57,8 +57,8 @@ services:
         - ../microsservicos/Pedidos:/app
       restart: always
       command: >
-        sh -c "chmod +x ./wait-for-mysql.sh &&
-              ./wait-for-mysql.sh &&
+        sh -c "chmod +x /app/wait-for-mysql.sh &&
+              /app/wait-for-mysql.sh &&
               cd src/Pedidos.Service && 
               dotnet ef database update --context PedidoContext --project ../Pedidos.Data/Pedidos.Data.csproj &&
               dotnet run"
@@ -99,8 +99,8 @@ services:
         - ../microsservicos/Produtos:/app
       restart: always
       command: >
-        sh -c "chmod +x ./wait-for-mysql.sh &&
-              ./wait-for-mysql.sh &&
+        sh -c "chmod +x /app/wait-for-mysql.sh &&
+              /app/wait-for-mysql.sh &&
               cd src/Produtos.Service && 
               dotnet ef database update --context ProdutoContext --project ../Produtos.Data/Produtos.Data.csproj &&
               dotnet run"
